# router/RegisterRouter.go
@@ -3,11 +3,8 @@ package router
 import (
 	"rango/app/controller/api"
 	"rango/app/controller/auth"
-	"rango/app/controller/use"
 	"rango/app/controller/user"
 	"rango/middleware"
-
-	docs "rango/docs"
 
 	"github.com/gin-gonic/gin"
 	swaggerfiles "github.com/swaggo/files"
@@ -20,13 +17,9 @@ func RegisterRouter(engine *gin.Engine) {
 		router.GET("/", api.Index{}.Index)
 		router.GET("/totp", api.Totp{}.Secret)
 		router.GET("/params/:id", api.Index{}.Params)
-		router.GET("/ping", api.Index{}.Ping)
 		router.GET("/mysql", api.Index{}.Mysql)
-		router.GET("/viper/config", api.Viper{}.ViperConfig)
-		router.POST("/cmd", api.Command{}.Index)
-		router.GET("/aes", api.Aes{}.Index)
+		router.GET("/mongo", api.Mongo{}.Mongo)
 		router.GET("/kafka", api.Kafka{}.Start)
-		router.GET("/jwt", api.Jwt{}.Index)
 		router.GET("/secret/add", api.Secret{}.Create)
 		router.GET("/secret/select", api.Secret{}.Decrypt)
 		router.GET("/qrcode/create", api.Qrcode{}.Create)
@@ -38,12 +31,6 @@ func RegisterRouter(engine *gin.Engine) {
 		router.Use(middleware.JWTAuth()).Use(middleware.RBAC()).PUT("/edit", user.User{}.Edit)
 		router.Use(middleware.JWTAuth()).Use(middleware.RBAC()).DELETE("/delete", user.User{}.Delete)
 	}
-	router = engine.Group("/use")
-	{
-		router.GET("/mongo", use.Mongo{}.Mongo)
-		router.GET("/glog", use.Glog{}.Glog)
-		router.GET("/logrus", use.Logrus{}.Logrus)
-	}
 
 	// 注册所有路由
 	router = engine.Group("/route")
@@ -51,7 +38,6 @@ func RegisterRouter(engine *gin.Engine) {
 		router.GET("/add", auth.Auth{}.AddGroupRoute(engine.Routes()))
 	}
 	// 文档
-	docs.SwaggerInfo.BasePath = "/api"
 	engine.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 	// 静态资源
 	engine.Static("/s", "./static")
